# SuperMro

./: .gitignore  LICENSE  QUICKSTART.md  README.md  install.py  pyproject.toml  requirements.txt
examples/: sample_project_inheritance.gv
examples/sample_project/: __init__.py  exceptions.py  models.py  processors.py
src/supermro/: __init__.py  __main__.py  analyzer.py  cli.py  visualizer.py
tests/: __init__.py  test_analyzer.py
